k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce
  namespace: ecommerce
  labels:
    app: ecommerce
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: ecommerce
