k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
  - host: ecommerce.local
    http:
      paths:
      - path: /api/core/(.*)
        pathType: Prefix
        backend:
          service:
            name: core-api-service-internal
            port:
              number: 5301
      - path: /api/users/(.*)
        pathType: Prefix
        backend:
          service:
            name: users-api-service-internal
            port:
              number: 5302
  - host: core-api.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: core-api-service-internal
            port:
              number: 5301
  - host: users-api.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: users-api-service-internal
            port:
              number: 5302
